--- a/index.html
+++ b/index.html
@@ -3,35 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Frontend Mentor | Advice generator app</title>
   </head>
+
   <body>
     <main>
-      <article className="advice__container">
-        <div className="advice__card">
-          <h1 className="advice__heading">
-            Advice # <span className="advice__number">117</span>
+      <article class="advice__container">
+        <div class="advice__card">
+          <h1 class="advice__heading">
+            Advice # <span class="advice__number">117</span>
           </h1>
-          <p className="advice__quote">
+          <p class="advice__quote">
             &#8220;It is easy to sit up and take notice, what's difficult is
             getting up and taking action.&#8221;
           </p>
           <img
             src="/images/pattern-divider-desktop.svg"
-            className="advice__divider"
+            class="advice__divider"
             alt="divider"
           />
-          <button className="advice__btn">
-            <img src="/images/icon-dice.svg" alt="dice" className="advice__dice" />
+          <button class="advice__btn">
+            <img
+              src="/images/icon-dice.svg"
+              alt="dice"
+              class="advice__dice"
+            />
           </button>
         </div>
       </article>
