--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <script src="/js/index.js" defer></script>
     <title>Frontend Mentor | Advice generator app</title>
   </head>
 
